<resources>
    <string name="app_name">Scheduler</string>

    <string name="fab">Home Button</string>

    <!-- Main Menu -->
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_mental">Mindfulness</string>
    <string name="nav_reminder">Reminders</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_email">Email</string>
    <string name="nav_social">Social</string>
    <string name="nav_com">Communicate</string>
    <string name="nav_school">School</string>
    <string name="nav_homework">Homework</string>
    <string name="nav_extracurriculars">Extracurriculars</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>

    <!-- Quotes -->
    <string name="quote">Inspire…</string>
    <string name="inspire">Inspire</string>

    <!-- Main Menu Header -->
    <string name="menu_content">AzTech Scheduler</string>

    <!-- Main Activity Menu Description -->
    <string name="menu_open">Open Drawer</string>
    <string name="menu_close">Closed Drawer</string>
    <string name="title_activity_schedule">Schedule</string>
    <!-- Strings used for fragments for navigation -->
    <string name="schedule_first">Morning</string>
    <string name="schedule_second">Afternoon</string>
    <string name="schedule_third">Evening</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Mindfulness -->
    <string name="mind">Mindfulness</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Message Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="exclaim">!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_email">Invalid Email</string>

    <!-- Login Activity -->
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Calendar -->
    <string name="calendar">Calendar</string>
    <string name="weekly">Weekly</string>
    <string name="add_event">Add Event</string>

    <!-- Notification Reminders -->
    <string name="selectTime">Select a Time</string>
    <string name="currentTime">Current Time: N/A</string>
    <string name="alarmTime">Alarm Time: </string>
    <string name="alarmSet">No Alarm Set</string>
    <string name="cancel">Cancel</string>
    <string name="reminderName">Reminder Name:</string>
    <string name="enterReminder">Enter Reminder</string>
    <string name="save">Save</string>
    <string name="title_activity_chat_bot_loading_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="login_to_existing_account">Login to Existing Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="welcome_greeting">Welcome!</string>
    <string name="title_activity_personal_account">PersonalAccount</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="preferred_name">Preferred Name</string>
    <string name="primary_email">Primary Email</string>
    <string name="profile_image">Profile Image</string>
    <string name="custom_greeting">Custom Greeting</string>
    <string name="greeting">Greeting</string>
    <string name="pw">Password</string>
    <string name="save_button">Save</string>
    <string name="messages">Messages</string>
    <string name="enter_message">Enter Message</string>
    <string name="bot_message">Bot Message</string>
    <string name="user_message">User Message</string>
    <string name="date_time">Date Time</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="back_to_messaging">Back to Messaging</string>
    <string name="background_color_theme">Background Color Theme</string>
    <string name="message_color_theme">Message Color Theme</string>
    <string name="received_message_theme">Received Message Theme</string>
    <string name="sent_message_theme">Sent Message Theme</string>
    <string name="online_status">Online Status</string>
    <string name="online_status_offline">Online Status: Offline</string>
    <string name="status_offline">Status: Offline</string>


</resources>