<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.firebase.PersonalAccount">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textPreferredName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/preferred_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textPreferredName"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/primary_email"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textEmail"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/profile_image"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profilePicture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/textProfile"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round"
            app:riv_oval="true" />

        <!--
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profilePicture2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/textProfile"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/profilePicture"
            android:scaleType="centerCrop"
            android:src="@drawable/wallpaper21"
            app:riv_oval="true" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profilePicture3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/textProfile"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/profilePicture2"
            android:scaleType="centerCrop"
            android:src="@drawable/wallpaper23"
            app:riv_oval="true" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profilePicture4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/textProfile"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/profilePicture3"
            android:scaleType="centerCrop"
            android:src="@drawable/wallpaper25"
            app:riv_oval="true" /> -->

        <TextView
            android:id="@+id/textGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePicture"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/custom_greeting"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextGreeting"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textGreeting"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="@string/greeting"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextGreeting"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/pw"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textPassword"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_button_background"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>